# Annual_Project

./: .gitignore  Cargo.tml  README.md  requirement.txt
Project/App/: Page.html
Project/App/backend/: app.py  predict_app.py
Project/App/backend/models/: linear_model.h5
Project/App/frontend/: package-lock.json  package.json
Project/App/frontend/src/: index.html  styles.scss
Project/App/frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  flask-requests.service.ts
Project/App/style/: style.css
Project/Docs/Rapport/: report.ipynb
Project/Docs/Results/Logs/1024x512x128x32_augmented_sgd_relu_dropout_regulizerl2_mlp_128x128_greyscale_categorical-crossentropy/train/: events.out.tfevents.1594661684.damso-2.home.38171.117227.v2  events.out.tfevents.1594661706.damso-2.home.profile-empty
Project/Lib/: Cargo.toml
Project/Lib/src/: lib.rs  linear_model.rs  mlp.rs  test_mlp.rs
Project/Lib/src/models/linear_models/: classification.rs  linear.rs
Project/Tests/: classification.py  linear_classification_tests.py  linear_regression_tests.py  test_classification.py  test_classification_MLP.py  test_mlp.py  test_regression.py  test_regression_MLP.py
Project/lib/: __init__.py  core.py  linear.py  mlp.py
Project/lib/models/: Cargo.toml  lib.rs
Project/lib/models/linear/: classification.rs  mod.rs  regression.rs  utils.rs
Project/lib/models/misc/: images.rs  models.rs
Project/lib/models/mlp/: classification.rs  common.rs  core.rs  mod.rs  regression.rs  utils.rs
Projet_Annuel/: Modele.cpp  Modele.h
src/: lib.rs
(+303 files in other folders)
