[package]
name = "lib"
version = "0.1.0"
authors = ["DamienSmagghe <damien.smagghe@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ndarray = "0.13.1"
ndarray-linalg = { version="0.12.0", features=['intel-mkl']}

[lib]
crate-type = ["cdylib"]

