[package]
name = "rustlib"
version = "0.1.0"
authors = ["groupe_11"]
edition = "2020"

[dependencies]
rand = "0.6"
image = "0.21.1"
serde_json = "1.0"
nalgebra = "0.18.0"

[lib]
name = "rustlib"
crate-type = ["dylib"]
path = "lib.rs"

[dependencies.cpython]
version = "0.2"
features = ["extension-module"]
